Fixed page jumping and added first to 5 wins logic

--- a/style.css
+++ b/style.css
@@ -23,12 +23,17 @@ h2 {
   margin-bottom: 40px;
 }
 
+h3 {
+  text-align: center;
+}
+
 .btn-container {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 200px;
-  margin-bottom: 100px;
+  margin-bottom: 75px;
+  height: 60px;
 }
 
 .btn {
@@ -44,7 +49,6 @@ h2 {
 
 .btn:hover {
   opacity: 0.8;
-  font-size: 21px;
   cursor: pointer;
 }
 
@@ -64,4 +68,23 @@ h2 {
   flex-direction: column;
   gap: 10px;
   margin-top: 30px;
+}
+
+.reset {
+  margin-top: 50px;
+}
+
+.round-text {
+  height: 10px;
+}
+
+.game-winner {
+  height: 10px;
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+.score-container {
+  display: flex;
+  gap: 20px;
 }
